--- a/Predicting house Price.ipynb
+++ b/Predicting house Price.ipynb
@@ -2668,6 +2668,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 323,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7188032199294926"
+      ]
+     },
+     "execution_count": 323,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model3.score(X_test,Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 314,
    "metadata": {},
    "outputs": [
@@ -2686,30 +2706,6 @@
     "y_true = df['medv'].iloc[:30]\n",
     "x_test = df[['rm', 'chas', 'nox','ptratio','lstat']].iloc[:30]\n",
     "\n",
-    "y_pred = model3.predict(x_test)\n",
-    "\n",
-    "meanErr = mse(y_true, y_pred)\n",
-    "\n",
-    "meanErr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 315,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9.269451888634547"
-      ]
-     },
-     "execution_count": 315,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "y_pred = model3.predict(x_test)\n",
     "\n",
     "meanErr = mse(y_true, y_pred)\n",
